--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -102,11 +102,35 @@
                     <div class="panel panel-default">
                         <div class="panel-heading"><h3>Tus formularios</h3></div>
                         <div class="panel-body">
-                            <div class="list-group">
-                                <a href="#" class="list-group-item list-group-item-action">Formulario 1</a>
-                                <a href="#" class="list-group-item list-group-item-action">Formulario 2</a>
-                                <a href="#" class="list-group-item list-group-item-action">Formulario 3</a>
-                            </div>
+                            @*<div class="list-group">*@
+                            <table class="table">
+                                <tr>
+
+                                </tr>
+                                @foreach (var item in Model.Formularios)
+                                {
+                                <tr>
+
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Nombre)
+
+                                    <td>
+                                        <div align='center'><input type="checkbox" name="Formulario" value="Formulario"></div><br>
+
+
+
+                                </tr>
+                                }
+
+
+                            </table>
+
+
+
+                                @*<a href="#" class="list-group-item list-group-item-action">Formulario 1</a>   @Html.Display("Formularios")     <p> @Model.Formularios  </p>
+            <a href="#" class="list-group-item list-group-item-action">Formulario 2</a>
+            <a href="#" class="list-group-item list-group-item-action">Formulario 3</a>*@
+                                @*</div>*@
                         </div>
                     </div>                  
                 </div>
