--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/CrearUsuario.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/CrearUsuario.cshtml
@@ -37,6 +37,11 @@
                                         <form>
                                             <div class="input-group" style="width:250px">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                                <input type="text" class="form-control" name="Nombre" placeholder="Cedula">
+                                            </div>
+                                            <br />
+                                            <div class="input-group" style="width:250px">
+                                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                                                 <input type="text" class="form-control" name="Nombre" placeholder="Nombre">
                                             </div>
                                             <br />
@@ -51,6 +56,11 @@
                                             </div>
                                             <br />
                                             <div class="input-group" style="width:250px">
+                                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                                <input type="text" class="form-control" name="SegundoApellido" placeholder="Direccion">
+                                            </div>
+                                            <br />
+                                            <div class="input-group" style="width:250px">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                                                 <input name="CorreoInstitucional" type="email" class="form-control" placeholder="Correo institucional">
                                             </div>
@@ -61,10 +71,10 @@
                                             </div>
                                             <br />
                                             <div class="form-group">
-                                                <input type="submit" value="Registrarse" name="Registrarse" />
+                                                <input type="submit" value="Registrar" name="Registrar" />
                                             </div>
                                             <div class="form-group">
-                                                @Html.ActionLink("Volver", "Login")
+                                                @Html.ActionLink("Volver", "VerPersonas")
                                             </div>
                                         </form>
                                     </div>
