--- a/Opiniometro_WebApp/Opiniometro_WebApp/Content/bootstrap.css
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Content/bootstrap.css
@@ -282,7 +282,7 @@ th {
         font-size: 16px;
         border: none;
         outline: none;
-        color: rgb(230,230,230);
+        color: rgb(102,102,102);
         padding: 14px 16px;
         background-color: inherit;
         font-family: inherit;
@@ -290,7 +290,7 @@ th {
     }
 
     .navbar b:hover, .dropdown:hover .dropbtn {
-        background-color: rgb(102,102,102);
+        background-color: rgb(230,230,230);
     }
 
 .dropdown-contentt {
@@ -319,6 +319,13 @@ th {
 .dropdown:hover .dropdown-contentt {
   display: block;
 }
+
+.navbar-inverse .dropbtn:hover, .navbar-inverse .dropbtn:focus
+{
+    color: rgb(102,102,102);
+}
+
+
 
 
 .glyphicon {
@@ -4733,8 +4740,8 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-    background-color: rgb(230,230 ,230);
-    border-color: #080808;
+    background-color: rgb(230,230,230);
+    border-color: rgb(230,230,230);
 }
 .navbar-inverse .navbar-brand {
   color: #9d9d9d;
