--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -21,96 +21,106 @@
     </div>
 
     <div class="container">
-            <div class="row">
-                <div class="col-sm-8">
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><h3>Buscar grupos</h3></div>
-                        <div class="panel-body">
-                            <!-- Esta forma hace que la búsqueda aparezca como parte del URL. -->
-                            <!--<form asp-controller="AsignarFormularios" asp-action="Index">
-                                <p>
-                                    Nombre: <input type="text" name="SearchString">
-                                   <input type="submit" value="Buscar" />
-                                </p>
-                            </form>-->
-                            <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
-                            @using (Html.BeginForm())
-                            {
-                                <!-- Buscador -->
-                                <p>
-                                    Nombre del curso: @Html.TextBox("SearchString")
-                                    <input type="submit" value="Buscar" />
-                                </p>
-                            }
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Buscar grupos</h3></div>
+                    <div class="panel-body">
+                        <!-- Esta forma hace que la búsqueda aparezca como parte del URL. -->
+                        <!--<form asp-controller="AsignarFormularios" asp-action="Index">
+        <p>
+            Nombre: <input type="text" name="SearchString">
+           <input type="submit" value="Buscar" />
+        </p>
+    </form>-->
+                        <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
+                        @using (Html.BeginForm())
+                        {
+                            <!-- Buscador -->
+                            <p>
+                                Nombre del curso: @Html.TextBox("SearchString")
+                                <input type="submit" value="Buscar" />
+                            </p>
+                        }
 
+                        Unidad Académica: @Html.DropDownList("UnidadAcademica") <br /> <br />
+                        Carreras: @Html.DropDownList("Carreras") <br /> <br />
+                        Cursos: @Html.DropDownList("Cursos")
+
+
+                    </div>
+                </div>
+
+
+
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Resultados:</h3></div>
+                    <div class="panel-body">
+                        <!-- Tabla de grupos -->
+                        <table class="table">
+                            <!-- Table row (fila) de encabezados. -->
+                            <tr>
+                                <!-- Table header -->
+                                <th>
+                                    Curso
+                                </th>
+                                <th>
+                                    Ciclo
+                                </th>
+                                <th>
+                                    Numero de grupo
+                                </th>
+                                <th>
+                                    Seleccionar para asignar
+                                </th>
+                            </tr>
+
+                            <!-- Para cada item en Model::Grupos... -->
+                            @foreach (var item in Model.Grupos)
+                            {
+                                <!-- Table row (fila) de elementos -->
+                                <tr>
+                                    <!-- Nombre de curso -->
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.nombreCurso)
+                                    </td>
+                                    <!-- Año -->
+                                    <td>
+                                        <div align='center'>@Html.DisplayFor(modelItem => item.anno) - @Html.DisplayFor(modelItem => item.semestre)</div>
+                                    </td>
+                                    <!-- Numero de grupo -->
+                                    <td>
+                                        <div align='center'>@Html.DisplayFor(modelItem => item.numero)</div>
+                                    </td>
+                                    <!-- Checkbox para asignar (por el momento no tiene funcionalidad) -->
+                                    <td>
+                                        <div align='center'><input type="checkbox" name="Curso" value="Curso"></div><br>
+                                    </td>
+                                </tr>
+                            }
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-sm-4">
+
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Tus formularios</h3></div>
+                    <div class="panel-body">
+                        <div class="list-group">
+                            <a href="#" class="list-group-item list-group-item-action">Formulario 1</a>
+                            <a href="#" class="list-group-item list-group-item-action">Formulario 2</a>
+                            <a href="#" class="list-group-item list-group-item-action">Formulario 3</a>
                         </div>
                     </div>
-
-
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><h3>Resultados:</h3></div>
-                        <div class="panel-body">
-                            <!-- Tabla de grupos -->
-                            <table class="table">
-                                <!-- Table row (fila) de encabezados. -->
-                                <tr>
-                                    <!-- Table header -->
-                                    <th>
-                                        Curso
-                                    </th>
-                                    <th>
-                                        Ciclo
-                                    </th>
-                                    <th>
-                                        Numero de grupo
-                                    </th>
-                                    <th>
-                                        Seleccionar para asignar
-                                    </th>
-                                </tr>
-
-                                <!-- Para cada item en Model::Grupos... -->
-                                @foreach (var item in Model.Grupos)
-                                {
-                                    <!-- Table row (fila) de elementos -->
-                                    <tr>
-                                        <!-- Nombre de curso -->
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.nombreCurso)
-</td>
-                                        <!-- Año -->
-                                        <td>
-                                            <div align='center'>@Html.DisplayFor(modelItem => item.anno) - @Html.DisplayFor(modelItem => item.semestre)</div>
-</td>
-                                        <!-- Numero de grupo -->
-                                        <td>
-                                            <div align='center'>@Html.DisplayFor(modelItem => item.numero)</div>
-</td>
-                                        <!-- Checkbox para asignar (por el momento no tiene funcionalidad) -->
-                                        <td>
-                                            <div align='center'><input type="checkbox" name="Curso" value="Curso"></div><br>
-</td>
-                                    </tr>
-                                }
-                            </table>
-                        </div>
-                    </div>                  
-                </div>                       
-                <div class="col-sm-4">
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><h3>Tus formularios</h3></div>
-                        <div class="panel-body">
-                            <div class="list-group">
-                                <a href="#" class="list-group-item list-group-item-action">Formulario 1</a>
-                                <a href="#" class="list-group-item list-group-item-action">Formulario 2</a>
-                                <a href="#" class="list-group-item list-group-item-action">Formulario 3</a>
-                            </div>
-                        </div>
-                    </div>                  
                 </div>
-                </div>
+            </div>
+
+           
+
+        </div>
         </div>
 
 </body>
