--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Collapsible.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Collapsible.cshtml
@@ -9,7 +9,6 @@
         border: none;
         text-align: left;
         outline: none;
-        font-size: 15px;
     }
 
         /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
@@ -17,13 +16,28 @@
             background-color: #ccc;
         }
 
+
+    .main {
+        font-size: 17px;
+        font-weight: bold;
+    }
+
+    .secondary {
+        font-size: 16px;
+    }
+
+    .terciary {
+        font-size: 15px;
+    }
+
     /* Style the collapsible content. Note: hidden by default */
     .content {
-        padding: 0 18px;
+        padding: 0 0px;
         background-color: white;
         max-height: 0;
         overflow: hidden;
         transition: max-height 0.2s ease-out;
+        font-size: 15px;
     }
 
     .collapsible:after {
