Unida barra de login con la barra de Home.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -11,7 +11,10 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <!--Barra-->
+    @Html.Partial("~\\Views\\Shared\\Auth\\BarraLogin.cshtml")
+
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="margin-top:145px" ;>
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -31,7 +34,7 @@
                         <a onclick="location.href='@Url.Action("Contact", "Home")';return false;">Insertar Usuario</a>
                         <a onclick="location.href='@Url.Action("About", "Home")';return false;">Editar información de otros usuarios</a>
                     </div>
-                </div> 
+                </div>
 
                 <div class="dropdown">
                     <button class="dropbtn">
@@ -39,16 +42,19 @@
                         <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-contentt">
-                        <a onclick="location.href='@Url.Action("About", "Home")';return false;" > Insertar Formulario </a>
+                        <a onclick="location.href='@Url.Action("About", "Home")';return false;"> Insertar Formulario </a>
                         <a onclick="location.href='@Url.Action("AsignarFormularios", "AsignarFormularios")';return false;">Asignar Formulario</a>
                         <a onclick="location.href='@Url.Action("About", "Home")';return false;">Visualizar resultados evaluaciones</a>
                     </div>
-                </div> 
-               
+                </div>
+
 
             </div>
         </div>
-    </div>
+    </nav>
+
+
+
     <div class="container body-content">
         @RenderBody()
         <hr />
