--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -80,7 +80,7 @@
                         @Html.ValidationMessageFor(model => model.TieneObservacion, "", new { @class = "text-danger" })
                 </div>*@
             @*Combobox *@
-            <select id="observacion" onchange="seleccionarObservacion()">
+            <select id="observacion" onchange="seleccionarObservacion();">
                 <option value="Si">Si</option>
                 <option value="No">No</option>
             </select>
@@ -92,8 +92,8 @@
         function seleccionarObservacion()
         {
             var seleccion = document.getElementById("observacion");
-            
-            if (seleccion.nodeValue == "Si")
+
+            if (seleccion.value == "Si")
                 @Html.EditorFor(model => model.TieneObservacion, true);
             else 
                 @Html.EditorFor(model => model.TieneObservacion, false);
