parte sebastian para sprint 1

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -28,10 +28,12 @@
                         <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-contentt">
-                        <a onclick="location.href='@Url.Action("Contact", "Home")';return false;">Insertar Usuario</a>
-                        <a onclick="location.href='@Url.Action("About", "Home")';return false;">Editar información de otros usuarios</a>
+                        <a onclick="location.href='@Url.Action("VerPersonas", "Admin")';return false;">Ver información de Personas</a>
+                        <a onclick="location.href='@Url.Action("CrearUsuario", "Admin")';return false;">Insertar Usuario</a>
+                        <a onclick="location.href='@Url.Action("Index", "LogInPerfiles")';return false;">orueba perfiles Usuario</a>
                     </div>
                 </div> 
+
 
                 <div class="dropdown">
                     <button class="dropbtn">
@@ -39,9 +41,11 @@
                         <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-contentt">
-                        <a onclick="location.href='@Url.Action("About", "Home")';return false;" > Insertar Formulario </a>
+                        <a onclick="location.href='@Url.Action("Index", "Formulario")';return false;"> Insertar Formulario </a>
                         <a onclick="location.href='@Url.Action("AsignarFormularios", "AsignarFormularios")';return false;">Asignar Formulario</a>
-                        <a onclick="location.href='@Url.Action("About", "Home")';return false;">Visualizar resultados evaluaciones</a>
+                        <a onclick="location.href='@Url.Action("Index", "Responde")';return false;">Visualizar resultados evaluaciones</a>
+                        <a onclick="location.href='@Url.Action("Index", "Seccion")';return false;"> Seccion </a>
+                        <a onclick="location.href='@Url.Action("Index", "Item")';return false;"> Item </a>
                     </div>
                 </div> 
                
