Agregado código de AgregarPersonaUsuario

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/CrearUsuario.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/CrearUsuario.cshtml
@@ -37,7 +37,7 @@
                                         <form>
                                             <div class="input-group" style="width:250px">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                                <input type="text" class="form-control" name="Nombre" placeholder="Cedula">
+                                                <input type="text" class="form-control" name="Cedula" placeholder="Cedula">
                                             </div>
                                             <br />
                                             <div class="input-group" style="width:250px">
@@ -57,7 +57,7 @@
                                             <br />
                                             <div class="input-group" style="width:250px">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                                <input type="text" class="form-control" name="SegundoApellido" placeholder="Direccion">
+                                                <input type="text" class="form-control" name="Direccion" placeholder="Direccion">
                                             </div>
                                             <br />
                                             <div class="input-group" style="width:250px">
@@ -67,7 +67,7 @@
                                             <br />
                                             <div class="input-group" style="width:250px">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-asterisk"></i></span>
-                                                <input type="password" class="form-control" name="Contrasena" placeholder="Contraseña">
+                                                <input type="password" class="form-control" name="Contrasenna" placeholder="Contrasenna">
                                             </div>
                                             <br />
                                             <div class="form-group">
