arreglos que se me olvidaron

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <div class="dropdown-contentt">
                         <a onclick="location.href='@Url.Action("VerPersonas", "Admin")';return false;">Ver información de Personas</a>
                         <a onclick="location.href='@Url.Action("CrearUsuario", "Admin")';return false;">Insertar Usuario</a>
-                        <a onclick="location.href='@Url.Action("Index", "LogInPerfiles")';return false;">orueba perfiles Usuario</a>
+                        <!--<a onclick="location.href='@Url.Action("Index", "LogInPerfiles")';return false;">orueba perfiles Usuario</a>-->
                     </div>
                 </div>
 
@@ -46,7 +46,8 @@
                     <div class="dropdown-contentt">
                         <a onclick="location.href='@Url.Action("Index", "Formulario")';return false;"> Insertar Formulario </a>
 
-                        <a onclick="location.href='@Url.Action("AsignarFormularios", "AsignarFormularios")';return false;">Asignar Formulario</a>
+                        <a onclick="location.href='@Url.Action("Index", "Home")';return false;">Asignar Formulario</a>
+                        <!--<a onclick="location.href='@Url.Action("AsignarFormularios", "AsignarFormularios")';return false;">Asignar Formulario</a> -->
                         <a onclick="location.href='@Url.Action("Index", "Responde")';return false;">Visualizar resultados evaluaciones</a>
                         <a onclick="location.href='@Url.Action("Index", "Seccion")';return false;"> Seccion </a>
                         <a onclick="location.href='@Url.Action("Index", "Item")';return false;"> Item </a>
