--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Seccion</h4>
         <hr />
@@ -33,15 +33,20 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-secondary" />
+                <input type="button" value="Cancelar" class="btn btn-secondary" onclick="accionBotonCancelar()" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+@* La accion que sucede al seleccionar boton Cancelar *@
+<script>
+        function accionBotonCancelar() {
+            document.location = '@Url.Action("Index")';
+        }
+</script>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
