--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
@@ -16,7 +16,7 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2"}  @id = "codiguito" @oninput = "codigoLleno()")
+        @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2"}  )
 
         <div class="col-md-10">
             @Html.EditorFor(model => model.CodigoFormulario, new { htmlAttributes = new { @class = "form-control" } })
@@ -36,18 +36,18 @@
     @* Creacion de los tres botones de la forma que el PO quiere que se visualicen siempre *@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Crear" class="btn btn-secondary" id="botonCrearFormulario" onclick="accionBotonCrearFormulario()" />
+        
+            <input type="submit" value="Crear" class="btn btn-secondary" id="botonCrearFormulario" 
+                   @{ if(null != null) { 
+                         @:disabled="disabled" 
+                    } }
+                    />
             @*<input type="submit" value="Vista Previa" class="btn btn-secondary" p id="botonVistaPreviaFormulario" onclick="accionBotonVistaPreviaFormulario()" />*@
-            <input type="submit" value="Cancelar" class="btn btn-secondary" id="botonCancelarFormulario" onclick="accionBotonCancelarFormulario()" />
+            <input type="submit" value="Cancelar" class="btn btn-secondary" id="botonCancelarFormulario" onclick="accionBotonCancelar()" />
         </div>
     </div>
 
-    @* Accion al seleccionar el boton de crear formulario , deberia irse a la pagina de crear pregunta*@
-    <script>
-        function accionBotonCrearFormulario() {
-            document.getElementById("botonCrearFormulario").style.color = "green";
-        }
-    </script>
+    
 
     @* Accion al seleccionar el boton de vista previa de formulario*@
     @*<script>
@@ -58,22 +58,12 @@
 
     @* Accion al seleccionar el boton de cancelar la creacion de un formulario *@
     <script>
-        function accionBotonCancelarFormulario() {
-
-            document.getElementById("botonCancelarFormulario").style.color = "red";
-
+        function accionBotonCancelar() {
+            document.location = '@Url.Action("Index")';
         }
     </script>
 
-    <p id="demo"></p>
-    <script>
-        function codigoLleno() {
 
-            var x = document.getElementById("codiguito").value;
-            document.getElementById("demo").innerHTML = "You wrote: " + x;
-
-        }
-    </script>
 
 
 
