--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Details.cshtml
@@ -1,58 +1,85 @@
 ﻿@model Opiniometro_WebApp.Models.Item
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Vista Previa";
 }
 
-<h2>Details</h2>
+<h2>Vista Previa</h2>
+
+
 
 <div>
-    <h4>Item</h4>
-    <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TextoPregunta)
-        </dt>
 
         <dd>
             @Html.DisplayFor(model => model.TextoPregunta)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Categoria)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Categoria)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TieneObservacion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TieneObservacion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Seleccion_Unica.ItemId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Seleccion_Unica.ItemId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Texto_Libre.ItemId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Texto_Libre.ItemId)
+            @*<textarea name="descripcion" rows="5" cols="40">@Html.DisplayFor(model => model.TextoPregunta)</textarea>*@
         </dd>
 
     </dl>
 </div>
+
+<script language="javascript">
+    if (model.TipoPregunta == 1) {
+        <textarea name="descripcion" rows="5" cols="40">Escriba su respuesta aqui</textarea>
+    }
+    if (model.TipoPregunta == 3) {
+        <textarea name="descripcion" rows="5" cols="40">Si/No</textarea>
+    }
+    if (model.TieneObservacion == 1) {
+        <textarea name="descripcion" rows="5" cols="40">Escriba su respuesta aqui</textarea>
+    }
+</script>
+
+<script>
+    function seleccionarTieneObservacion()
+    {
+        if (model.TieneObservacion == 1) {
+            <textarea name="descripcion" rows="5" cols="40">Escriba su respuesta aqui</textarea>
+        }
+    }
+</script>
+
+<div class="form-group">
+    @Html.Label("", htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        <select id="observacion" onchange="seleccionarObservacion()">
+            <option value="Si">Si</option>
+            <option value="No">No</option>
+            <option value="No se/No respondo/No aplica">No se/No respondo/No aplica</option>
+        </select>
+        <p id="observacionID"></p>
+    </div>
+</div>
+
+<dt>
+    @Html.DisplayNameFor(model => model.TieneObservacion)
+</dt>
+
+<dd>
+    @Html.DisplayFor(model => model.TieneObservacion)
+</dd>
+
+<dt>
+    @Html.DisplayNameFor(model => model.Seleccion_Unica.ItemId)
+</dt>
+
+<dd>
+    @Html.DisplayFor(model => model.Seleccion_Unica.ItemId)
+</dd>
+
+<dt>
+    @Html.DisplayNameFor(model => model.Texto_Libre.ItemId)
+</dt>
+
+<dd>
+    @Html.DisplayFor(model => model.Texto_Libre.ItemId)
+</dd>
+
+
+
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ItemId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
