--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
@@ -51,35 +51,11 @@
 
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.ItemId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ItemId }) |
+                @Html.ActionLink("Vista Previa", "Details", new { id = item.ItemId }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.ItemId })
             </td>
         </tr>
     }
 </table>
 
-<style>
-    #pop {
-        height: 280px;
-        width: 470px;
-        position: fixed;
-        bottom: 50%;
-        right: 50%;
-        border: 2px solid;
-        padding: 10px;
-        background: #FFFFFF;
-        border-radius: 9px;
-    }
-
-    #close {
-        right: 5;
-        top: 5;
-        float: right;
-    }
-</style>
-
-<div id="pop">
-    <button id="close" onclick="document.getElementById('pop').style.display='none'">X</button><br>
-    <a href="http://google.com">Esta vara se va a descontrolar</a>
-</div>
 
