--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Opiniometro_WebApp.Models.Seccion
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Crear Sección";
 }
 
-<h2>Create</h2>
+<h2>Crear Seccion</h2>
 
 
 @using (Html.BeginForm())
