--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Banco de Secciones</h2>
 
 <p>
-    <input type="submit" value="Crear Nueva Sección" class="btn btn-secondary"  id="botonNuevaSeccion" onclick="accionBotonNuevaSeccion()" />
+    <input type="submit" value="Crear Nueva Sección" class="btn btn-secondary"  id="botonNuevaSeccion" onclick="location.href = 'http://localhost:51103/Seccion/create'()" />
 </p>
 <table class="table">
     <tr>
@@ -32,9 +32,9 @@
             @Html.DisplayFor(modelItem => item.Descripcion)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.Titulo }) |
-            @Html.ActionLink("Details", "Details", new { id = item.Titulo }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Titulo })
+@*            @Html.ActionLink("Edit", "Edit", new { id = item.Titulo }) |*@
+            @*@Html.ActionLink("Details", "Details", new { id = item.Titulo }) |*@
+            @*@Html.ActionLink("Delete", "Delete", new { id = item.Titulo })*@
         </td>
     </tr>
 }
