--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
@@ -49,9 +49,9 @@
 
 
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.ItemId }) |
+           @* @Html.ActionLink("Edit", "Edit", new { id = item.ItemId }) |*@
             @Html.ActionLink("Details", "Details", new { id = item.ItemId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.ItemId })
+           @* @Html.ActionLink("Delete", "Delete", new { id = item.ItemId })*@
         </td>
     </tr>
 }
