Cambios temporales del home

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Details.cshtml
@@ -34,25 +34,11 @@
             @Html.DisplayFor(model => model.TieneObservacion)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SeleccionUnica.ItemID)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.SeleccionUnica.ItemID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Texto_Libre.ItemId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Texto_Libre.ItemId)
-        </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ItemID }) |
+    @*@Html.ActionLink("Edit", "Edit", new { id = Model.ItemID }) |*@
     @Html.ActionLink("Back to List", "Index")
 </p>
