--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
@@ -50,7 +50,7 @@
 
         <td>
            @* @Html.ActionLink("Edit", "Edit", new { id = item.ItemId }) |*@
-            @Html.ActionLink("Details", "Details", new { id = item.ItemId }) |
+            @Html.ActionLink("Vista Previa", "Details", new { id = item.ItemId }) 
            @* @Html.ActionLink("Delete", "Delete", new { id = item.ItemId })*@
         </td>
     </tr>
