Cambios para que funcionen correctamente unos botones

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
@@ -43,7 +43,7 @@
                     } }
                     />
             @*<input type="submit" value="Vista Previa" class="btn btn-secondary" p id="botonVistaPreviaFormulario" onclick="accionBotonVistaPreviaFormulario()" />*@
-            <input type="submit" value="Cancelar" class="btn btn-secondary" id="botonCancelarFormulario" onclick="accionBotonCancelar()" />
+            @*<input type="submit" value="Cancelar" class="btn btn-secondary" id="botonCancelarFormulario" onclick="accionBotonCancelar()" />*@
         </div>
     </div>
 
